# scripta

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  biome.json  electron-builder.yml  electron.vite.config.ts  index.html  package.json  playwright.config.ts  playwright.electron.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.e2e.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.e2e.ts  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: audit.yml  ci-skip.yml  ci.yml  codeql-skip.yml  codeql.yml  release.yml  update-cask.yml  verify-dmg-naming.yml
docs/: exploratory-qa.md  implementation-guide.md  migration-plan.md  parity-checklist.md  specification.md  tauri-purge-inventory.md
docs/.scripta/: initialized.json
docs/adr/: 0000-record-architecture-decisions.md  0001-pdf-export-timeout.md  0002-scripta-asset-protocol.md  0003-fs-error-message-format.md  0004-self-implemented-semver.md  0005-self-implemented-ogp-parser.md  0006-settings-migration-policy.md  0007-commands-ipc-client-layer.md  0008-structured-fs-error.md  0009-renderer-only-e2e-strategy.md  0010-minisearch-rejection.md  template.md
e2e/: backlink-panel.spec.ts  code-block-copy.spec.ts  command-palette.spec.ts  context-menu.spec.ts  export.spec.ts  file-editing.spec.ts  file-watcher.spec.ts  filetree-scroll.spec.ts  formatting.spec.ts  heading-live-preview.spec.ts  help-dialog.spec.ts  link-cards.spec.ts  link-widget.spec.ts  list-heading-editing.spec.ts  math-preview.spec.ts  mermaid-widget.spec.ts  scratchpad.spec.ts  search.spec.ts  settings-dialog.spec.ts  settings-persistence.spec.ts  sidebar-toggle.spec.ts  slide-view.spec.ts  smoke.spec.ts  status-bar.spec.ts  tab-management.spec.ts  table-widget.spec.ts  tooltip.spec.ts  unresolved-wikilinks.spec.ts  wikilink.spec.ts  workspace-restoration.spec.ts  workspace.spec.ts
e2e/electron/: asset-url.electron.spec.ts  file-lifecycle.electron.spec.ts  image-rendering.electron.spec.ts  mermaid-rendering.electron.spec.ts  pdf-export.electron.spec.ts  pdf-pagebreak.electron.spec.ts  search-l3.electron.spec.ts  settings-migration.electron.spec.ts  settings-persistence.electron.spec.ts  (+3 more)
patches/: style-mod@4.1.3.patch
playwright-report-electron/: index.html
plugins/: no-navigator-platform-destruct.grit  no-navigator-platform-optional-bracket.grit  no-navigator-platform-optional-userAgent.grit  no-navigator-platform-optional.grit  no-navigator-platform.grit
public/: theme-init.js
scripts/: assert-dmg-naming.sh  bump-version.sh  check-legacy-residue.sh  check-tauri-residue.sh  check-tauri-versions.sh  generate-katex-css.js
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  watcher.rs
src-tauri/src/commands/: export.rs  file.rs  git_sync.rs  mod.rs  ogp.rs  search.rs  updater.rs  watcher.rs  workspace.rs
(+330 files in other folders)
