[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["ymnao"]
license = "MIT"
repository = "https://github.com/ymnao/mark-draft"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"
required-features = ["tauri-app"]

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-plugin-log", "dep:tauri-plugin-shell", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [], optional = true }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
trash = "5"
notify = "6"

[dev-dependencies]
tempfile = "3"
