[package]
name = "app"
version = "0.1.2"
description = "A Tauri App"
authors = ["ymnao"]
license = "MIT"
repository = "https://github.com/ymnao/scripta"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"
required-features = ["tauri-app"]

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-plugin-log", "dep:tauri-plugin-shell", "dep:tauri-plugin-store", "dep:tauri-plugin-window-state", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [], optional = true }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tempfile = "3"
trash = "5"
notify = "8"
ureq = { version = "2", features = ["tls"] }
semver = "1"
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
tokio = { version = "1", features = ["rt"] }
unicode-normalization = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "objc2-app-kit"] }
objc2-app-kit = { version = "0.3", features = ["NSPrintInfo", "NSPrintOperation"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }
